drkns 17.08.2020 19:45:45 +0100 - build 5653

1. gh-263: Use ArcLite for .aab by default

drkns 16.08.2020 01:04:27 +0100 - build 5652

1. 0003816: Смещение текста вправо на 1 символ при центрировании сепаратора.

2. Рефакторинг.

svs 15.08.2020 18:34:34 +0300 - build 5651

1. SQLite 3.33.0

drkns 09.08.2020 12:26:42 +0100 - build 5650

1. При сортировке в режимах панели без отображения путей пути игнорируются.

drkns 04.08.2020 17:56:27 +0100 - build 5649

1. С форума: ненужный запрос привилегий

drkns 03.08.2020 22:49:55 +0100 - build 5648

1. gh-262 AutoComplete popup does not show under Windows 10's Terminal

2. Рефакторинг.

drkns 30.07.2020 19:00:15 +0100 - build 5647

1. Уточнение 5646.

drkns 29.07.2020 23:39:52 +0100 - build 5646

1. Рефакторинг.

2. gh-261 Mistake in help file
   На самом деле нет.
   Там же - добавлена пара новых форматов отображения имени в Info Panel.

3. Clang analyzer warnings.

4. Переписан скринсейвер (а почему бы и нет).

drkns 22.07.2020 01:35:45 +0100 - build 5645

1. Уточнение 5643.

drkns 21.07.2020 19:49:10 +0100 - build 5644

1. Мелкое уточнение логики запускателя.

drkns 21.07.2020 17:34:53 +0100 - build 5643

1. Продолжение 5631.1.

drkns 20.07.2020 19:33:22 +0100 - build 5642

1. Подсказки по клавишам в различных меню теперь генерируются кодом.

drkns 19.07.2020 01:44:02 +0100 - build 5641

1. Рефакторинг.

MZK 11.07.2020 21:04:57 -0700

1. Перевёл на английский оставшиеся страницы справки far:config; дочистил eng/TechInfo.txt.

drkns 11.07.2020 02:48:48 +0100 - build 5640

1. Рефакторинг.

2. Для сборки теперь можно использовать Clang с GNU toolchain.

drkns 07.07.2020 17:57:54 +0100 - build 5639

1. Продолжение 5631.1.

2. Рефакторинг.

drkns 06.07.2020 18:56:37 +0100 - build 5638

1. Новые версии fmt, tinyxml2, Catch2.

drkns 05.07.2020 19:49:40 +0100 - build 5637

1. Продолжение 5370 - пропуск излишней прокрутки при запуске.

drkns 05.07.2020 18:37:32 +0100 - build 5636

1. VS 2019 16.7 & GCC warnings.
