@@ -234,9 +234,10 @@ public:
 	void SetFilterEnabled(bool bEnabled) { bFilterEnabled = bEnabled; }
 	void SetFilterLocked(bool bLocked) { bFilterEnabled = bLocked; }
 	bool AddToFilter(string_view Str);
+	size_t size() const { return Items.size(); }
+	bool empty() const { return Items.empty(); }
 	// SelectPos == -1 & non-empty Items - everything is filtered
-	size_t size() const { return SelectPos == -1? 0 : Items.size(); }
-	bool empty() const { return SelectPos == -1 || Items.empty(); }
+	bool HasVisible() const { return SelectPos > -1 && !Items.empty(); }
 	int GetShowItemCount() const { return static_cast<int>(Items.size() - ItemHiddenCount); }
 	int GetVisualPos(int Pos);
 	int VisualPosToReal(int VPos);
